--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Georgia', serif;
-      background-color: #0d1b2a;
-      color: #f0e9dc;
+      background-color: #0a1a2f;
+      color: #f5e8cc;
       margin: 0;
       padding: 0;
     }
@@ -35,10 +35,10 @@
     }
     .links a {
       margin: 0 1rem;
-      color: #f0e9dc;
+      color: #f5e8cc;
       text-decoration: none;
       font-weight: bold;
-      border: 1px solid #f0e9dc;
+      border: 1px solid #f5e8cc;
       padding: 0.5rem 1rem;
       border-radius: 5px;
     }
