--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Georgia', serif;
+    background: url('sense1.png') no-repeat center center fixed;
+    background-size: cover;
+    color: #f5e8cc;
+    text-align: center;
+    padding: 10% 10%;
+  }
+  h1, h2, p {
+    text-shadow: 1px 1px 2px #000;
+  }
+</style>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>$SENSE – Common Sense on Chain</title>
@@ -51,41 +66,11 @@
   </style>
 </head>
 <body>
-
-<header>
-  <img src="logo.png" alt="$SENSE logo">
-  <h1>$SENSE – Powered by Reason</h1>
-  <p>Not a project. A principle. Just Common Sense.</p>
-</header>
-
-<section>
-  <h2>📜 The Awakening</h2>
-  <p>
-    We believe in clarity over chaos.  
-    In courage over compliance.  
-    In memes with meaning.  
-    $SENSE is more than a coin – it’s a call to reason.
-  </p>
-</section>
-
-<section>
-  <h2>🧠 What is $SENSE?</h2>
-  <p>
-    $SENSE is a meme-powered token launched on Solana.  
-    Inspired by the legacy of Thomas Paine, and built for thinkers, rebels and misfits.
-  </p>
-</section>
-
-<section class="links">
-  <h2>🌐 Join the Community</h2>
-  <a href="https://twitter.com/sensewithpaine" target="_blank">X / Twitter</a>
-  <a href="https://t.me/yourtelegramlink" target="_blank">Telegram</a>
-  <a href="https://pump.fun" target="_blank">Pump.fun</a>
-</section>
-
-<footer>
-  &copy; 2025 Common Sense ($SENSE). Powered by clarity.
-</footer>
-
+<h1>$SENSE Community</h1>
+<p style="font-size: 1.5em; max-width: 800px; margin: auto;">
+A global movement rooted in clarity,<br>
+courage, and Common Sense. You’re<br>
+not alone, let’s write the next chapter.
+</p>
 </body>
 </html>
