--- a/index.html
+++ b/index.html
@@ -1,76 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Georgia', serif;
-    background: url('sense1.png') no-repeat center center fixed;
-    background-size: cover;
-    color: #f5e8cc;
-    text-align: center;
-    padding: 10% 10%;
-  }
-  h1, h2, p {
-    text-shadow: 1px 1px 2px #000;
-  }
-</style>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>$SENSE – Common Sense on Chain</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>$SENSE – Common Sense on the Blockchain</title>
   <style>
     body {
-      font-family: 'Georgia', serif;
-      background-color: #0a1a2f;
-      color: #f5e8cc;
       margin: 0;
-      padding: 0;
-    }
-    header {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0D0D1F;
+      color: #F8E8C1;
       text-align: center;
-      padding: 3rem 1rem 1rem;
     }
-    header img {
-      height: 80px;
+    .container {
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 3rem 1rem;
+    }
+    .logo {
+      width: 240px;
+      margin-bottom: 2rem;
     }
     h1 {
       font-size: 2.5rem;
-      margin: 0.5rem 0;
-    }
-    section {
-      max-width: 700px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-      line-height: 1.6;
-    }
-    .links {
-      text-align: center;
-      margin: 2rem 0;
+      font-weight: bold;
+      margin-bottom: 1rem;
+      color: #F8E8C1;
     }
     .links a {
-      margin: 0 1rem;
-      color: #f5e8cc;
-      text-decoration: none;
-      font-weight: bold;
-      border: 1px solid #f5e8cc;
-      padding: 0.5rem 1rem;
-      border-radius: 5px;
+      color: #F8E8C1;
+      text-decoration: underline;
+      margin: 0 0.8rem;
+      font-size: 1rem;
     }
     footer {
-      text-align: center;
-      font-size: 0.9rem;
-      padding: 2rem 1rem;
+      margin-top: 3rem;
+      font-size: 0.8rem;
       color: #888;
     }
   </style>
 </head>
 <body>
-<h1>$SENSE Community</h1>
-<p style="font-size: 1.5em; max-width: 800px; margin: auto;">
-A global movement rooted in clarity,<br>
-courage, and Common Sense. You’re<br>
-not alone, let’s write the next chapter.
-</p>
+  <div class="container">
+    <img class="logo" src="logo_figure_only.png" alt="Common Sense logo">
+    <h1>It’s just Common Sense.</h1>
+    <div class="links">
+      <a href="#">Twitter/X (Coming soon)</a> |
+      <a href="#">Telegram (Coming soon)</a>
+    </div>
+    <footer>
+      ⚠️ This is not financial advice. Use common sense.
+    </footer>
+  </div>
 </body>
 </html>
